[package]
name = "it8951"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "A IT8951 E-Paper driver"
repository = "https://github.com/pbert519/it8951"
categories = ["no-std", "embedded"]
keywords = ["ePaper", "Display", "epd", "eink"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "1"}
embedded-graphics-core = "0.4.0"
log = { version = "0.4", default-features = false}

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-graphics = "0.8.1"

[features]
default = ["log_max_level_off"]
log_max_level_off = ["log/max_level_off"]
log_max_level_info = ["log/max_level_info"]