[package]
name = "it8951"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A IT8951 E-Paper driver"
repository = "https://github.com/pbert519/it8951"
categories = ["no-std", "embedded"]
keywords = ["ePaper", "Display", "epd", "eink"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "1"}
embedded-graphics-core = "0.4.0"
defmt = { version = "^1.0.1", optional = true }
heapless = "0.9.1"

[features]
default = ["alloc"]
defmt = ["dep:defmt", "embedded-graphics-core/defmt", "heapless/defmt"]
alloc = []

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
