[package]
name = "esp32-it8951"
version = "0.1.0"
edition = "2021"


[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.36.0", features = ["binstart"] }
esp-idf-svc = { version="0.50.1", features = ["experimental", "alloc"] }
embedded-svc = "0.28.1"
log = "0.4"

it8951 = { path = "../.."}
esp-idf-hal = "0.45"
embedded-hal = "1"
embedded-graphics = "0.8.1"

[build-dependencies]
embuild = "0.33"
anyhow = "1"
